[gd_scene load_steps=23 format=2]

[ext_resource path="res://scenes/ui/ComboDisplay.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/agane/Agane╠Ç 55 (roman).ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=12]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=13]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=14]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=15]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=16]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=17]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=18]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=19]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=20]
size = 32
font_data = ExtResource( 2 )

[node name="ComboDisplay" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 3, 3 )
script = ExtResource( 1 )

[node name="Scorecard" type="HBoxContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
custom_constants/separation = 15

[node name="ComboCounter" type="VBoxContainer" parent="Scorecard"]
margin_bottom = 1080.0

[node name="GalaxyBrainChain" type="Label" parent="Scorecard/ComboCounter"]
visible = false
margin_right = 1920.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )

[node name="QuickChain" type="Label" parent="Scorecard/ComboCounter"]
visible = false
margin_right = 1920.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )

[node name="ActiveChain" type="Label" parent="Scorecard/ComboCounter"]
visible = false
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )

[node name="SequentialChain" type="Label" parent="Scorecard/ComboCounter"]
visible = false
margin_bottom = 14.0
custom_fonts/font = SubResource( 4 )

[node name="ChainLength" type="Label" parent="Scorecard/ComboCounter"]
visible = false
margin_bottom = 14.0
custom_fonts/font = SubResource( 5 )

[node name="TwoTrick" type="Label" parent="Scorecard/ComboCounter"]
visible = false
margin_right = 1920.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 6 )

[node name="HatTrick" type="Label" parent="Scorecard/ComboCounter"]
visible = false
margin_right = 1920.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 7 )

[node name="SimulChaineous" type="Label" parent="Scorecard/ComboCounter"]
visible = false
margin_right = 1920.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 8 )

[node name="Total" type="Label" parent="Scorecard/ComboCounter"]
visible = false
margin_bottom = 14.0
custom_fonts/font = SubResource( 9 )

[node name="OtherCombos" type="Label" parent="Scorecard/ComboCounter"]
visible = false
margin_right = 93.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 10 )

[node name="ComboScore" type="VBoxContainer" parent="Scorecard"]
margin_left = 15.0
margin_right = 15.0
margin_bottom = 1080.0

[node name="BrainChainScore" type="Label" parent="Scorecard/ComboScore"]
visible = false
margin_bottom = 14.0
rect_pivot_offset = Vector2( -316, 10.6667 )
custom_fonts/font = SubResource( 11 )

[node name="QuickChainScore" type="Label" parent="Scorecard/ComboScore"]
visible = false
margin_bottom = 14.0
custom_fonts/font = SubResource( 12 )

[node name="ActiveChainScore" type="Label" parent="Scorecard/ComboScore"]
visible = false
margin_bottom = 14.0
custom_fonts/font = SubResource( 13 )

[node name="SequentialChainScore" type="Label" parent="Scorecard/ComboScore"]
visible = false
margin_bottom = 14.0
custom_fonts/font = SubResource( 14 )

[node name="ChainLengthScore" type="Label" parent="Scorecard/ComboScore"]
visible = false
margin_bottom = 14.0
custom_fonts/font = SubResource( 15 )

[node name="TwoTrickScore" type="Label" parent="Scorecard/ComboScore"]
visible = false
margin_bottom = 14.0
custom_fonts/font = SubResource( 16 )

[node name="HatTrickScore" type="Label" parent="Scorecard/ComboScore"]
visible = false
margin_bottom = 14.0
custom_fonts/font = SubResource( 17 )

[node name="SimulChaineousScore" type="Label" parent="Scorecard/ComboScore"]
visible = false
margin_bottom = 14.0
custom_fonts/font = SubResource( 18 )

[node name="TotalScore" type="Label" parent="Scorecard/ComboScore"]
visible = false
margin_bottom = 14.0
custom_fonts/font = SubResource( 19 )

[node name="OtherCombosScore" type="Label" parent="Scorecard/ComboScore"]
visible = false
margin_bottom = 14.0
custom_fonts/font = SubResource( 20 )

[node name="CompleteScorecardTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
[connection signal="timeout" from="CompleteScorecardTimer" to="." method="_on_CompleteScorecardTimer_timeout"]
